Binding to specific addr

--- a/doc/example.cfg
+++ b/doc/example.cfg
@@ -1,5 +1,6 @@
+primary_addr = "127.0.0.1"
 primary_port = 33013
-admin_port = 33015
+admin_addr = "ANY:33015"
 
 # working directory
 # work_dir = "."
