Add CPP definition to Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,7 @@ CORO_IMPL ?= ASM
 
 @SET_MAKE@
 CC := @CC@
+CPP := @CPP@
 CFLAGS := @CFLAGS@
 CFLAGS_WARNS := @CFLAGS_WARNS@
 CPPFLAGS := @CPPFLAGS@
