Fix out-of-source builds

--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -10,15 +10,16 @@ src-lua += src-lua/jit/vmdef.lua
 src-lua/jit/vmdef.lua: third_party/luajit/src/jit/vmdef.lua
 
 src-lua/net_cdef.lua: include/octopus_ev.h include/net_io.h include/iproto_def.h Makefile
+	@mkdir -p $(dir $@)
 	$(E) "GEN	$@"
 	$(Q)echo "local ffi = require 'ffi'" > $@
 	$(Q)echo "module (...)" >> $@
 	$(Q)echo "ffi.cdef [[ " >> $@
 	$(Q)echo "struct palloc_pool;" >> $@
-	$(Q)$(CPP) -P $(CPPFLAGS) include/octopus_ev.h | $(SED) -n '/^typedef [a-z]\+ ev_tstamp/p; /typedef struct ev_\(io\|timer\)/,/^}/p;' >> $@
-	$(Q)$(CPP) -P $(CPPFLAGS) include/iproto_def.h | $(SED) -n '/^struct iproto\(_retcode\)\? \+{/,/^}/p;' >> $@
-	$(Q)$(CPP) -P $(CPPFLAGS) include/net_io.h | $(SED) -n '/^struct netmsg\(_head\|_tailq\)\? \+{/,/^}/p; /^enum conn_memory_ownership \+{/,/^}/p; /^struct conn \+{/,/^}/p' >> $@
-	$(Q)$(CPP) -P $(CPPFLAGS) -DLUA_DEF='@@@' include/net_io.h | $(SED) -n '/@@@/!d; s/@@@//; p' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/octopus_ev.h | $(SED) -n '/^typedef [a-z]\+ ev_tstamp/p; /typedef struct ev_\(io\|timer\)/,/^}/p;' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/iproto_def.h | $(SED) -n '/^struct iproto\(_retcode\)\? \+{/,/^}/p;' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/net_io.h | $(SED) -n '/^struct netmsg\(_head\|_tailq\)\? \+{/,/^}/p; /^enum conn_memory_ownership \+{/,/^}/p; /^struct conn \+{/,/^}/p' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) -DLUA_DEF='@@@' $(srcdir)/include/net_io.h | $(SED) -n '/@@@/!d; s/@@@//; p' >> $@
 	$(Q)echo "]]" >> $@
 
 ifneq (,$(GRAPHITE_ADDR))
@@ -33,5 +34,5 @@ dist-clean += src-lua/registry.m
 src-lua/registry.m: $(src-lua) scripts/stringify Makefile
 	@mkdir -p $(dir $@)
 	$(E) "GEN	$@"
-	$(Q)sh $(srcdir)/scripts/gen-lua-registry.sh $(src-lua) > $@.tmp
+	$(Q)sh $(srcdir)/scripts/gen-lua-registry.sh $(foreach src,$(src-lua),$(srcdir)/$(src)) > $@.tmp
 	$(Q)mv $@.tmp $@
