--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -9,6 +9,10 @@ src-lua += src-lua/jit/vmdef.lua
 
 src-lua/jit/vmdef.lua: third_party/luajit/src/jit/vmdef.lua
 
+
+# this dependency is required for $(CPP) calls below
+include/net_io.h: cfg/octopus.h
+
 src-lua/net_cdef.lua: include/octopus_ev.h include/net_io.h include/iproto_def.h Makefile
 	@mkdir -p $(dir $@)
 	$(E) "GEN	$@"
