Workaround centos build

--- a/Makefile.in
+++ b/Makefile.in
@@ -13,12 +13,16 @@ CORO_IMPL ?= ASM
 @SET_MAKE@
 CC := @CC@
 CPP := @CPP@
+unexport CFLAGS
 CFLAGS := @CFLAGS@
 CFLAGS_WARNS := @CFLAGS_WARNS@
+unexport CPPFLAGS
 CPPFLAGS := @CPPFLAGS@
+unexport LDFLAGS
 LDFLAGS := @LDFLAGS@
 RANLIB := @RANLIB@
 AR := ar
+unexport ARFLAGS
 ARFLAGS := rc
 RAGEL := @RAGEL@
 RAGELFLAGS := @RAGELFLAGS@
