Switch to LuaJIT FFI

--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -1,8 +1,10 @@
 obj += src-lua/prelude.o
+obj += src-lua/objc.o
 obj += src-lua/index.o
 obj += src-lua/stat.o
 obj += src-lua/net.o
-obj += src-lua/net_cdef.o
+obj += src-lua/cdef.o
+obj += src-lua/cdef_base.o
 obj += src-lua/jit/v.o
 obj += src-lua/jit/dump.o
 obj += src-lua/jit/bc.o
@@ -17,18 +19,27 @@ src-lua/jit/vmdef.lua: .luajit
 # this dependency is required for $(CPP) calls below
 include/net_io.h: cfg/octopus.h
 
-src-lua/net_cdef.lua: include/octopus_ev.h include/net_io.h include/iproto_def.h Makefile
+dist-clean += src-lua/cdef.lua
+src-lua/cdef.lua: include/octopus.h include/index.h include/fiber.h include/octopus_ev.h include/net_io.h include/iproto_def.h Makefile
 	@mkdir -p $(dir $@)
 	$(E) "GEN	$@"
 	$(Q)echo "local ffi = require 'ffi'" > $@
+	$(Q)echo "require('cdef_base')" >> $@
 	$(Q)echo "module (...)" >> $@
 	$(Q)echo "ffi.cdef [[ " >> $@
 	$(Q)echo "struct palloc_pool;" >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/octopus.h | $(SED) -n '/^\(enum tnt_object_flags\|struct tnt_object\) \+{/,/^}/{s/\[\]/[?]/;p;} ' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/octopus.h | $(SED) -n '/^void object_/p ' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/index.h | $(SED) -n '/^struct index_conf \+{/,/^}/{s/\[\]/[?]/;p;}' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/fiber.h | $(SED) -n '/^typedef struct coro_context/p;' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/fiber.h | $(SED) -n '/^struct \(fiber\|octopus_coro\|coro_context\) \+{/,/^}/{s/\[\]/[?]/;p;}' >> $@
 	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/octopus_ev.h | $(SED) -n '/^typedef [a-z]\+ ev_tstamp/p; /typedef struct ev_\(io\|timer\)/,/^}/p;' >> $@
 	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/iproto_def.h | $(SED) -n '/^struct iproto\(_retcode\)\? \+{/,/^}/{s/\[\]/[?]/;p;}'  >> $@
 	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/net_io.h | $(SED) -n '/^struct netmsg\(_mark\|_head\|_tailq\)\? \+{/,/^}/p; /^enum conn_memory_ownership \+{/,/^}/p; /^struct conn \+{/,/^}/p' >> $@
 	$(Q)$(CPP) -P $(CPPFLAGS) -DLUA_DEF='@@@' $(srcdir)/include/net_io.h | $(SED) -n '/@@@/!d; s/@@@//; p' >> $@
+	$(Q)$(CPP) -P $(CPPFLAGS) $(srcdir)/include/tbuf.h | $(SED) -n '/^struct tbuf \+{/,/^}/p' >> $@
 	$(Q)echo "]]" >> $@
+
 
 ifneq (,$(GRAPHITE_ADDR))
 obj += src-lua/graphite.o
