Export row_v12 to Lua

--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -7,6 +7,7 @@ obj += src-lua/stat.o
 obj += src-lua/net.o
 obj += src-lua/cdef.o
 obj += src-lua/cdef_base.o
+obj += src-lua/wal.o
 obj += src-lua/jit/v.o
 obj += src-lua/jit/dump.o
 obj += src-lua/jit/bc.o
