--- a/src-lua/Makefile
+++ b/src-lua/Makefile
@@ -9,6 +9,7 @@ obj += src-lua/net.o
 obj += src-lua/cdef.o
 obj += src-lua/cdef_base.o
 obj += src-lua/wal.o
+obj += src-lua/fiber_lock.o
 obj += src-lua/jit/v.o
 obj += src-lua/jit/dump.o
 obj += src-lua/jit/bc.o
