--- a/cfg/Makefile
+++ b/cfg/Makefile
@@ -5,7 +5,7 @@ obj += cfg/octopus.o
 no-extra-warns += cfg/octopus.o
 no-extra-warns += cfg/prscfg.o
 # no warns at all: it complains even with -Wall
-cfg/octopus.o: CFLAGS_EXTRA := $(filter-out -W%,$(CFLAGS_EXTRA))
+cfg/octopus.o: XCFLAGS := $(filter-out -W%,$(XCFLAGS))
 
 cfg/warning.o: cfg/prscfg.h
 
