--- a/cfg/Makefile
+++ b/cfg/Makefile
@@ -43,8 +43,9 @@ ifeq (1, $(HAVE_CONFETTI))
     cfg/prscfg.h: cfg/octopus.cfg_tmpl
 	$(E) "CNFTI	$@"
 	$(Q)$(CONFETTI) -i $< -H $@
+endif
 
-    cfg/defs.h: cfg/octopus.cfg
+# this target doesn't depend on CONFETTI
+cfg/defs.h: cfg/octopus.cfg
 	$(E) "GEN	$@"
 	$(Q)$(SED) '/^[a-z]/!d; /^[ 	]*$$/d; s/^\([a-z_]\+\).*/#define CFG_\1 1/'< $< > $@
-endif
